# OptiPricer

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: benchmark.py
examples/: nifty_analysis.ipynb  nse_analysis_example.py
include/optipricer/: greeks.hpp  models.hpp  strategies.hpp  utils.hpp
include/optiverse/: greeks.hpp  models.hpp  strategies.hpp
optipricer/: __init__.py  _core.pyi  chain.py  models.py  nse.py  strategies.py  surface.py  viz.py
src/: python_bindings.cpp
tests/: test_models.cpp
tests/python/: test_optipricer.py
