[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.10.0", "pybind11[global]"]
build-backend = "setuptools.build_meta"

[project]
name = "optiverse"
version = "0.1.0"
description = "A comprehensive options pricing and analysis library"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Shreyas Pachpor", email = "shreyaspachporr@gmail.com"}
]
keywords = ["options", "pricing", "black-scholes", "derivatives", "finance", "quantitative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Future and Options Trader",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "pybind11>=2.10.0",
]

[project.urls]
Homepage = "https://github.com/shreyaspachpor/OptiVerse"
Repository = "https://github.com/shreyaspachpor/OptiVerse"
Documentation = "https://github.com/shreyaspachpor/OptiVerse#readme"
"Bug Reports" = "https://github.com/shreyaspachpor/OptiVerse/issues"

[tool.setuptools]
packages = []  # No pure Python packages, only extension module

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
